<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="8dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetBlemish"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="5dp" />

    <EditText
        android:id="@+id/BlemishGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:layout_margin="5dp">

        <requestFocus />
    </EditText>
    

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetReminder" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt = "@string/SelectReminder" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetReminderFreq" />

    <EditText
        android:id="@+id/ReminderFreq"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       
         <Button 
            android:id="@+id/dialog_no_blemish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Back"
            android:layout_marginRight="10dp"
        ></Button>
        <Button 
            android:id="@+id/dialog_add_blemish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Add"
        ></Button>        
    </LinearLayout>

</LinearLayout>